update spring version and apply updates in classes