@@ -2,9 +2,8 @@ package com.clinica_administracion.sistema_administracion_clinica.others.excepti
 
 public class InvalidInput extends RuntimeException {
   public InvalidInput(String fieldName, Object stringValue, String expected) {
-    super(String.format(
-      "El campo '%s' no es válido. '%s' debería %s",
-      fieldName, stringValue, expected
+    super("El campo '%s' no es válido. '%s' debería %s".formatted(
+            fieldName, stringValue, expected
     ));
   }
   public InvalidInput(String fieldname) {
