@@ -3,6 +3,6 @@ package com.clinica_administracion.sistema_administracion_clinica.others.excepti
 // @ResponseStatus(value = HttpStatus.NOT_FOUND)
 public class ResourceNotFound extends RuntimeException{
   public ResourceNotFound(String objectName, String fieldname, String fieldValue) {
-    super(String.format("El/la %s con el %s ingresado no se ha encontrado. Valor ingresado: %s", objectName, fieldname, fieldValue));
+    super("El/la %s con el %s ingresado no se ha encontrado. Valor ingresado: %s".formatted(objectName, fieldname, fieldValue));
   }
 }
